# Backup_file_And_Recovery_System

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  PROJECT_DOCUMENTATION.md  README.md  README_backup.md  build.bat  build.sh  demo.bat  demo.sh  install_dependencies_simple.ps1  install_dependencies_windows.ps1  simple_demo.sh  test.sh
backed_up_files/backup_20250802_221156/: backup_metadata.json  file_state.db  index.html  wrong.html
include/: BackupManager.h  BackupMetadata.h  Compressor.h  Encryptor.h  FileTracker.h  Scheduler.h  Utils.h
src/: BackupManager.cpp  BackupMetadata.cpp  Compressor.cpp  Encryptor.cpp  FileTracker.cpp  Scheduler.cpp  Utils.cpp  main.cpp
